--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath*:/mapper/*.xml
 
 server.port=8080
+spring.mvc.date-format=yyyy-MM-dd
